--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codingphase-r3f-starter-kit",
+  "name": "hu-more-bot-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,6 +18,7 @@
     "hex-rgb": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-spinners-kit": "^1.9.1",
     "three": "^0.157.0"
