--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^7.3.0",
     "react-spinners-kit": "^1.9.1",
     "three": "^0.157.0"
