--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,31 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    /* Basic Options */
+    "target": "ES2022", // Updated to ES2022 fow consistency wif wib
+    "lib": ["ES2022", "DOM", "DOM.Iterable"], // Updated to ES2022
     "module": "ESNext",
+    "moduleResolution": "Node", // Use "Node" fow modewn bundwews
+    "baseUrl": ".",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "incremental": true,
     "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
 
-    /* Linting */
+    /* JSX Options */
+    "jsx": "react-jsx", // Use "react-jsx" fow automatic JSX wuntime
+
+    /* Stwict Type-Checking Options */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    /* triplex settings */
-    
-    "baseUrl": ".",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "incremental": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "es2022"],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "noEmit": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "types": ["@react-three/fiber"]
+    /* Advanced Options */
+    "allowImportingTsExtensions": true,
+    "noEmit": true, // Disabwe emitting JS fiwes (used wif bundwews)
+    "types": ["@react-three/fiber"] // Specific types to incwude
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
